--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,12 @@ version: '3'
 services:
   nodejs:
     #fill out the configuration here
+    image: node:10-alpine
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: my_website
+    restart: unless-stopped
     networks:
       - app-network
   
@@ -28,7 +34,7 @@ volumes:
     driver_opts:
       type: none
       #fill out your absolute path to your folder here
-      device: /absolute/path/to/web/template/folder
+      device: /Users/joseph/Desktop/CMSC 389T/cmsc389T-web-template/nginx-conf
       o: bind
 
 networks:
