--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       dockerfile: Dockerfile
     container_name: my_website
     restart: unless-stopped
+    ports:
+      - "81:8080"
     networks:
       - app-network
   
@@ -19,7 +21,7 @@ services:
     container_name: webserver
     restart: unless-stopped
     ports:
-      - "80:80"
+      - "82:8080"
     volumes:
       - web-root:/var/www/html
       - ./nginx-conf:/etc/nginx/conf.d
